--- a/views/sections/expenses/table.html
+++ b/views/sections/expenses/table.html
@@ -38,7 +38,7 @@
           </td>
           <td class="px-4 py-1">${{printf "%.2f" .Amount}}</td>
           <td class="px-4 py-1">
-            <button hx-get="/expenses/{{ .ID }}/edit" hx-target="#expenseRow{{.ID}}" hx-swap="outerHTML"
+            <button hx-get="/expenses/{{ .ID }}/edit" hx-target="#expenseRow{{.ID}}" hx-swap="outerHTML" hx-push-url="true"
               class="font-medium fade-me-out text-blue-600 hover:text-blue-800">
               Edit
             </button>
