--- a/views/sections/settings/telegram.html
+++ b/views/sections/settings/telegram.html
@@ -12,7 +12,7 @@
       <br>
       <br>
       <span class="text-md text-gray-800">Allowed users:</span>
-      <span class='text-indigo-700 bg-indigo-200 text-md font-medium me-2 px-2.5 py-0.5 rounded' hx-trigger="revealed"
+      <span class='text-indigo-700 bg-indigo-200 text-md font-medium me-2 px-2.5 py-0.5 rounded' hx-trigger="revealed, click from:#updateUsers delay:1s"
         hx-swap="innerHTML" hx-target="this" hx-post="/telegram/command"
         hx-vals='{"command": "getAllowedUsers"}'></span>
       <br>
@@ -23,6 +23,10 @@
       <button class='text-red-700 bg-red-200 text-md font-medium me-2 px-2.5 py-0.5 rounded' hx-trigger="click"
         hx-swap="innerHTML" hx-target="#mitoast" hx-post="/settings/telegram/command"
         hx-vals='{"command": "stop"}'>Stop</button>
+      <br>
+      <button id="updateUsers" class='mt-5 text-indigo-500 bg-indigo-200 text-md font-medium me-2 px-2.5 py-0.5 rounded' hx-trigger="click"
+        hx-swap="innerHTML" hx-target="#mitoast" hx-post="/settings/telegram/command"
+        hx-vals='{"command": "updateAllowedUsers"}'>Update allowed users</button>
     </div>
     <div class="w-1/2 text-sm text-justify overflwo-x-auto"> 
       Available telegram commands:<br><br>
